--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://NIMAICHAITANYA.github.io/weather_app",
   "name": "weather_app",
   "version": "0.1.0",
   "private": true,
